Neubot 0.4-rc4 [2011-07-19]
	* on_gui_login.py: Loop just once to avoid problems with Windows
	* i18n.js: correct bug, let i18n work on IE
	* js: delay i18n.translate()
	* Release neubot/0.4-rc4

Neubot 0.4-rc3 [2011-07-18]
	* Make it simpler to debug 404 Not Found events
	* Makefile: quick-dirty fix to adjust permissions
	* Makefile: initial support for uninstalling neubot
	* log.py: don't defer commit for too much time
	* Release neubot/0.4-rc3

Neubot 0.4-rc2 [2011-07-18]
	* setup.py: fix indent
	* main/module.py: align
	* main/module.py: ref all modules so py2exe includes them
	* on_gui_login.py: spam the user immediately
	* on_gui_login.py: give daemon time to breathe first
	* system: add win32 code to kill a process
	* on_gui_login: add -k switch to kill on_gui_login process
	* neubot.nsi: kill on_gui_login process on uninstall
	* neubot.nsi: change on_gui_login start-menu name
	* neubot.nsi: run also on_gui_login after install
	* Merge branch 'win32-fix-updates' into next
	* scripts/release: Initial support for -rc releases
	* Release neubot/0.4-rc2

Neubot 0.4-rc1 [2011-07-16]
	* manpage: simplify how-to-dump example
	* database/main.py: allow to query database path
	* Release neubot/0.3.7
	* speedtest/client.py: remeber position-in-queue history
	* Let /api/debug return position-in-queue history too
	* Merge branch 'measure-queue' into next
	* speedtest/client.py: print uri we're connecting to
	* rendezvous: add geoip_wrapper.py
	* database: add table_geoloc.py
	* database: Bump minor version because of geoloc table
	* rendezvous/server.py: implement geo-aware rendezvous
	* geo-rendezvous: Update configuration properties
	* Merge branch 'geo-rendezvous' into next
	* rendezvous/server.py: transparent geo-aware rendezvous
	* api/client.py: hide some properties
	* api/server.py: remove duplicate properties
	* http/client.py: hide some properties
	* http/server.py: hide some properties
	* net/CA.py: hide some properties
	* net/stream.py: hide most properties